Added row names

--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
 		-1px 1px 0 #000,
 		1px 1px 0 #000;  
 	-webkit-font-smoothing: antialiased;
-		}	
+		}
+	.vertical-text {
+		transform: rotate(-90deg);
+		transform-origin: left top 0;
+		position:relative;
+		float:left;
+		top:120px;
+		width:30px;
+		}
 	</style>
 </head>
 <body>
