--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Task Board by LevenTech</title>
 
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+	
     <script type="text/javascript" src="js/read-csv.js"></script>
 	<style type="text/css">
 	body {
@@ -86,6 +86,10 @@
 		margin: 5px;
 		display:none;
 	}
+	.ui-button {
+		font-size: 8px;
+		padding: 2px 2px 2px 2px; /* Or whatever makes it small enough. */
+	}	
 	</style>
 </head>
 <body>
@@ -97,11 +101,10 @@
           <input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
 	  </fieldset>
 	  <button class="toolbar-button" onclick="saveFile()">Save File</button>
-	  <button class="toolbar-button" onclick="newTask()">New Task</button>
     </div>
 	<br/>
 	<div id="divDialog" title="Basic dialog">
-		<textarea cols="40" rows="12" id="taskDetailsInput" ></textarea>
+		<textarea cols="20" rows="11" id="taskDetailsInput" ></textarea>
 	</div>
   <div id="output" style="width:100%;display:flex;flex-direction:row;"></div>
 </body>
