--- a/index.html
+++ b/index.html
@@ -66,20 +66,23 @@
 	}		
 	.app-header {
 		color: #fff;
-	   text-shadow:
-		-1px -1px 0 #000,
-		1px -1px 0 #000,
-		-1px 1px 0 #000,
-		1px 1px 0 #000;  
-	-webkit-font-smoothing: antialiased;
+		text-shadow: -1px -1px 0 #000,1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;  
+		-webkit-font-smoothing: antialiased;
+		}
+	.row-name {
+		float:left;
+		height:170px;
+		width:30px;
+		position:relative;
+		display:inline-block;
 		}
 	.vertical-text {
-		transform: rotate(-90deg);
-		transform-origin: left top 0;
-		position:relative;
-		float:left;
-		top:120px;
-		width:30px;
+		transform: translate(-50%) rotate(-90deg);
+		transform-origin: center center 0;
+		text-align:center;
+		position:absolute;
+		top:50%;
+		left:10px;
 		}
 	.toolbar-button {
 		float: left;
@@ -89,7 +92,7 @@
 	.ui-button {
 		font-size: 8px;
 		padding: 2px 2px 2px 2px; /* Or whatever makes it small enough. */
-	}	
+	}
 	</style>
 </head>
 <body>
@@ -104,7 +107,7 @@
     </div>
 	<br/>
 	<div id="divDialog" title="Basic dialog">
-		<textarea cols="20" rows="11" id="taskDetailsInput" ></textarea>
+		<textarea cols="20" rows="12" id="taskDetailsInput" ></textarea>
 	</div>
   <div id="output" style="width:100%;display:flex;flex-direction:row;"></div>
 </body>
