--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
+
     <script type="text/javascript" src="js/read-csv.js"></script>
 	<style type="text/css">
 	body {
@@ -97,13 +102,17 @@
 </head>
 <body>
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
-    <div class="form-horizontal well" style="width:50%;min-width:300px;max-width:600px;">
-      <fieldset style="float:left;min-width:300px;background:#F0F0F0;margin-left:15px;">
-          <label for="csvFileInput"> <strong>Choose a Task File (*.csv):</strong></label>
+    <div style="margin:10px;padding:10px;width:300px;float:left;min-width:300px;background:#F0F0F0;margin-left:15px;">
+          <label for="csvFileInput"> <strong>Select a Task File (*.csv):</strong></label>
 		  <br/><br/>
-          <input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
-	  </fieldset>
-	  <button class="toolbar-button" onclick="saveFile()">Save File</button>
+		<div class="fileinput fileinput-new" data-provides="fileinput">
+			<span class="btn btn-default btn-file"><span>Choose file</span><input type="file" onchange="handleFiles(this.files)" accept=".csv"/></span>
+			<span class="fileinput-filename"></span><span class="fileinput-new">No file chosen</span>
+		</div>		  
+	</div>
+	<button style="margin:30px;" class="btn btn-default toolbar-button" onclick="saveFile()">
+		<i class="fa fa-floppy-o" aria-hidden="true" style="margin-right:10px;"></i>Save File
+	</button>
     </div>
 	<br/>
 	<div id="divDialog" title="Basic dialog">
