--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 	<div id="divDialog" title="Basic dialog">
 		<textarea cols="20" rows="12" id="taskDetailsInput" ></textarea>
 	</div>
+	<div id="completeDialog" title="Basic dialog">
+		Are you sure you want to complete the task "<span id="completeTaskName" ></span>"?
+	</div>
   <div id="output" style="width:100%;display:flex;flex-direction:row;"></div>
 </body>
 </html>
