--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
 		left:10px;
 		}
 	.toolbar-button {
-		float: left;
-		margin: 5px;
-		display:none;
+		margin:15px;
+		margin-left: 30px;
 	}
 	.ui-button {
 		font-size: 8px;
@@ -100,26 +99,40 @@
 	}
 	</style>
 </head>
-<body>
+<body ondrop="dropBody(event)" ondragover="allowDrop(event)">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
     <div style="margin:10px;padding:10px;width:300px;float:left;min-width:300px;background:#F0F0F0;margin-left:15px;">
           <label for="csvFileInput"> <strong>Select a Task File (*.csv):</strong></label>
 		  <br/><br/>
 		<div class="fileinput fileinput-new" data-provides="fileinput">
-			<span class="btn btn-default btn-file"><span>Choose file</span><input type="file" onchange="handleFiles(this.files)" accept=".csv"/></span>
+			<span class="btn btn-default btn-file">
+				<i class="fa fa-folder-o" aria-hidden="true" style="margin-right:10px;"></i>
+				<span>Open File</span>
+				<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv"/>
+			</span>
 			<span class="fileinput-filename"></span><span class="fileinput-new">No file chosen</span>
 		</div>		  
 	</div>
-	<button style="margin:30px;" class="btn btn-default toolbar-button" onclick="saveFile()">
+	<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()">
+		<i class="fa fa-file-code-o" aria-hidden="true" style="margin-right:10px;"></i>New File
+	</button><br/>
+	<button class="btn btn-default toolbar-button savefile-button" onclick="saveFile()">
 		<i class="fa fa-floppy-o" aria-hidden="true" style="margin-right:10px;"></i>Save File
 	</button>
     </div>
 	<br/>
-	<div id="divDialog" title="Basic dialog">
+	<div id="divDialog">
 		<textarea cols="20" rows="12" id="taskDetailsInput" ></textarea>
 	</div>
-	<div id="completeDialog" title="Basic dialog">
+	<div id="completeDialog">
 		Are you sure you want to complete the task "<span id="completeTaskName" ></span>"?
+	</div>
+	<div id="saveDialog">
+		This file has not been saved, and you're about to lose your changes. Save it now?
+	</div>
+	<div id="newRowDialog">
+		Name your new row:
+		<input id="newRowName" width="50px"></input>
 	</div>
   <div id="output" style="width:100%;display:flex;flex-direction:row;"></div>
 </body>
