--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<span class="btn btn-default btn-file">
 				<i class="fa fa-folder-o" aria-hidden="true" style="margin-right:10px;"></i>
 				<span>Open File</span>
-				<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv"/>
+				<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
 			</span>
 			<span class="fileinput-filename"></span><span class="fileinput-new">No file chosen</span>
 		</div>		  
@@ -116,7 +116,7 @@
 	<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()">
 		<i class="fa fa-file-code-o" aria-hidden="true" style="margin-right:10px;"></i>New File
 	</button><br/>
-	<button class="btn btn-default toolbar-button savefile-button" onclick="saveFile()">
+	<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" disabled>
 		<i class="fa fa-floppy-o" aria-hidden="true" style="margin-right:10px;"></i>Save File
 	</button>
     </div>
