--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
 </head>
 <body ondrop="dropBody(event)" ondragover="allowDrop(event)">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
-    <div style="margin:10px;padding:10px;width:300px;float:left;min-width:300px;background:#F0F0F0;margin-left:15px;">
-		<label for="csvFileInput"> <strong>Select a Task File (*.csv):</strong></label>
-		<br/><br/>
+    <div style="margin:10px;padding:10px;width:350px;float:left;min-width:350px;background:#F0F0F0;margin-left:15px;">
 		<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput">
-			<span class="btn btn-default btn-file">
+			<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="float:left;margin:10px;">
+				<i class="fa fa-file-code-o" aria-hidden="true" style="margin-right:10px;"></i>New File
+			</button>
+			<span class="btn btn-default btn-file" style="float:left;margin:10px;">
 				<i class="fa fa-folder-o" aria-hidden="true" style="margin-right:10px;"></i>
 				<span>Open Local File</span>
 				<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
 			</span>
+			<br/><br/><br/>
+			<label for="csvFileInput" style="margin-left:10px;"> <strong>Current File:</strong></label>
 			<span class="fileinput-filename"></span><span class="fileinput-new">No file chosen</span>
 		</div>
 		<div id="open-drive-file">
@@ -51,11 +54,9 @@
 		</div>
 		<span id="result"></span>
 	</div>
-	<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()">
-		<i class="fa fa-file-code-o" aria-hidden="true" style="margin-right:10px;"></i>New File
-	</button><br/>
-	<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" disabled>
-		<i class="fa fa-floppy-o" aria-hidden="true" style="margin-right:10px;"></i>Save File
+	<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:30px;" disabled>
+		<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="font-size:300%;margin-right:10px;"></i></div>
+		<div style="float:left;text-align:left;">Save<br/>File</div>
 	</button>
 	<br/>
 	<div id="divDialog">
