--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Task Board by LevenTech</title>
 
+	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
@@ -35,10 +36,10 @@
     <div style="height:100px;margin:10px;padding:10px;width:350px;float:left;min-width:350px;background:#F0F0F0;margin-left:15px;">
 		<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput">
 			<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="float:left;margin:10px;">
-				<i class="fa fa-file-code-o" aria-hidden="true" style="margin-right:10px;"></i>New File
+				<i class="fa fa-file-code-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>New File
 			</button>
 			<span class="btn btn-default btn-file" style="float:left;margin:10px;">
-				<i class="fa fa-folder-o" aria-hidden="true" style="margin-right:10px;"></i>
+				<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
 				<span>Open Local File</span>
 				<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" onclick="this.value=null;" accept=".csv"/>
 			</span>
@@ -48,7 +49,7 @@
 		</div>
 		<div id="open-drive-file">
 			<button class="btn btn-default btn-file" onclick="createPicker();">
-				<i class="fa fa-folder-o" aria-hidden="true" style="margin-right:10px;"></i>
+				<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
 				<span>Open Drive File</span>
 			</button>
 		</div>
@@ -56,7 +57,7 @@
 	</div>
 	<div style="float:left;">
 		<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:30px;" disabled>
-			<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="font-size:300%;margin-right:10px;"></i></div>
+			<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="width:40px;font-size:300%;margin-right:10px;"></i></div>
 			<div style="float:left;text-align:left;">Save<br/>File</div>
 		</button>
 	</div>
@@ -70,7 +71,7 @@
 	</div>
  
 	<div id="finish-area" ondrop="dropFinish(event)" ondragover="allowDrop(event)" style="display:none;height:100px;margin:10px;padding:10px;width:200px;float:right;background:#000000;margin-right:15px;text-align:center;color:#FFFFFF;">
-			<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:10px;"></i> Finished
+			<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished
 	</div>
 	<br/>
 	<div class="my-dialog" id="divDialog">
