"Increment" to "Interval", fix Sorting

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<tr><td>Due Date:</td><td><input type="text" id="datepicker-due"></td></tr>
 			<tr style="height:30px;"></tr>
 			<tr style="height:30px;"><td>Color:</td><td><input type="text" id="colorpicker"></td></tr>
-			<tr><td>Increment:</td><td><input type="text" id="incrementpicker"></td></tr>
+			<tr><td>Interval:</td><td><input type="text" id="incrementpicker"></td></tr>
 			</table>
 		</div>
 	</div>
