--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</style>
 
 </head>
-<body ondrop="newRow(event)" ondragover="allowDrop(event)">
+<body ondrop="newRow(event)" ondragover="allowDrop(event)" style="height:100%;">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
     <div style="height:100px;margin:10px;padding:10px;width:350px;float:left;min-width:350px;background:#F0F0F0;margin-left:15px;">
 		<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput">
@@ -76,23 +76,24 @@
 	</div>
 	<br/>
 	<div class="my-dialog" id="editDialog">
-		<div style="float:left;">
-			<table>
-			<tr><td style="min-width:100px;">Task Name:</td><td><textarea type="text" cols="21" rows="2" id="namepicker"></textarea></td></tr>
-			<tr style="height:30px;"></tr>
-			<tr style="height:30px;"><td>Start Date:</td><td><input type="text" id="datepicker-start"></td></tr>
-			<tr><td>Due Date:</td><td><input type="text" id="datepicker-due"></td></tr>
-			<tr style="height:30px;"></tr>
-			<tr style="height:30px;">
-				<td>Color:</td>
-				<td>
-					<table><tr><td><input style="float:left;" type='color' id="colorpicker2" onchange="colorpicked();" /></td>
-					<td><input style="float:left;width:175px;" type="text" id="colorpicker" onchange="colortyped();" /></td></tr></table>
-				</td>
-			</tr>
-			<tr><td>Interval:</td><td><input type="text" id="incrementpicker"></td></tr>
-			</table>
-		</div>
+		<table style="float:left;width:100%;height:100%;">
+		<tr>
+			<td style="min-width:100px;">Task Name:</td>
+			<td><textarea type="text" cols="21" rows="2" id="namepicker" style="width:100%;"></textarea></td>
+		</tr>
+		<tr style="height:30px;"></tr>
+		<tr style="height:30px;"><td>Start Date:</td><td><input type="text" id="datepicker-start" style="width:100%;"></td></tr>
+		<tr><td>Due Date:</td><td><input type="text" id="datepicker-due" style="width:100%;"></td></tr>
+		<tr style="height:30px;"></tr>
+		<tr style="height:30px;">
+			<td>Color:</td>
+			<td>
+				<table><tr><td><input style="float:left;" type='color' id="colorpicker2" onchange="colorpicked();" /></td>
+				<td><input style="float:left;width:175px;width:100%;" type="text" id="colorpicker" onchange="colortyped();" /></td></tr></table>
+			</td>
+		</tr>
+		<tr><td>Interval:</td><td><input type="text" id="incrementpicker" style="width:100%;"></td></tr>
+		</table>
 	</div>
 	<div class="my-dialog" id="completeDialog">
 		Are you sure you want to complete the task "<span id="completeTaskName" ></span>"?
