Remember Tasks Across Session

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
 	<div style="float:left;">
 		<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:30px;" disabled>
 			<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="width:40px;font-size:300%;margin-right:10px;"></i></div>
-			<div style="float:left;text-align:left;">Save<br/>File</div>
+			<div style="float:left;text-align:left;">Save<br/>to File</div>
 		</button>
 	</div>
-
 	<div style="float:left;margin-top:30px;margin-left:15px;">
 		<p style="margin-left:10px;">
 		  <label for="font-size">Size:</label>
@@ -70,7 +69,6 @@
 		</p>
 		<div id="font-size-slider" style="width:150px;"></div>
 	</div>
- 
 	<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
 			<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
 			<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Complete Task</span>
