--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 		</p>
 		<div id="font-size-slider" style="width:150px;"></div>
 	</div>
+	<div id="new-task-drag" class="task-block medium-block now-task" draggable="true" style="margin-left:30px;float:left;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;display:none;" ondragstart="dragNew(event)" >
+		<br/>Drag for new task
+	</div>
 	<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
 			<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
 			<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Complete Task</span>
