Fix New Task Dragging

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</p>
 		<div id="font-size-slider" style="width:150px;"></div>
 	</div>
-	<div id="new-task-drag" class="task-block medium-block now-task" draggable="true" style="margin-left:30px;float:left;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;display:none;" ondragstart="dragNew(event)" >
+	<div id="new-task-drag" class="new-task-drag task-block medium-block now-task" draggable="true" style="margin-left:30px;float:left;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;display:none;" ondragstart="dragNew(event)" >
 		<br/>Drag for new task
 	</div>
 	<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
