--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 </head>
 <body ondrop="newRow(event)" ondragover="allowDrop(event)" style="height:100%;">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
-    <div style="height:100px;margin:10px;padding:10px;width:350px;float:left;min-width:350px;background:#F0F0F0;margin-left:15px;">
+	<div id="taskboard-toolbar">
+	<div id="left-buttons">
+    <div style="float:left;height:100px;margin:10px;padding:10px;width:350px;min-width:350px;background:#F0F0F0;margin-left:15px;">
 		<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput">
 			<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="float:left;margin:10px;">
 				<i class="fa fa-file-code-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>New File
@@ -62,20 +64,26 @@
 			<div style="float:left;text-align:left;">Save<br/>to File</div>
 		</button>
 	</div>
-	<div style="float:left;margin-top:30px;margin-left:15px;">
-		<p style="margin-left:10px;">
-		  <label for="font-size">Size:</label>
-		  <input type="text" id="font-size" readonly style="text-align:center;width:80px;border:0; color:#000000; font-weight:bold;">
-		</p>
-		<div id="font-size-slider" style="width:150px;"></div>
 	</div>
-	<div id="new-task-drag" class="new-task-drag task-block medium-block now-task" draggable="true" style="margin-left:30px;float:left;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;display:none;" ondragstart="dragNew(event)" >
-		<br/>Drag for new task
+	<div id="middle-buttons">
+	<div style="margin-top:30px;margin-left:10px;">
+	  <label for="font-size">Size:</label>
+	  <input type="text" id="font-size" readonly style="text-align:center;width:80px;border:0; color:#000000; font-weight:bold;">
+	  <div id="font-size-slider" style="margin-top:10px;width:150px;"></div>
 	</div>
+	</div>
+	<div id="right-buttons">
+
 	<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
 			<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
 			<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Complete Task</span>
 	</div>
+	<div id="new-task-drag" class="new-task-drag task-block medium-block now-task" draggable="true" style="margin-right:30px;float:right;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;display:none;" ondragstart="dragNew(event)" >
+		<br/>Drag for new task
+	</div>
+	</div>
+	</div>
+	
 	<br/>
 	<div class="my-dialog" id="editDialog">
 		<table style="float:left;width:100%;height:100%;">
