Fix Finish Instructions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 	<div id="finish-area" class="finish-area normal-finish" ondrop="dropFinish(event)" ondragover="highlightFinish(event)" ondragleave="unhighlightFinish(event)" style="">
 			<i class="fa fa-check-square-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i> Finished <br/><br/>
-			<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;">Drop here to Complete Task</span>
+			<span id="finish-instructions" ondragover="highlightFinish(event)" style="pointer-events: none;display:none;">Drop here to Complete Task</span>
 	</div>
 	<div id="new-task-drag" class="new-task-drag task-block medium-block now-task" draggable="true" style="margin-right:30px;float:right;width:100px;height:100px;background-color:LemonChiffon;vertical-align:center;" ondragstart="dragNew(event)" >
 		<br/>Drag for new task
