--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <script type="text/javascript" src="js/taskboard.js"></script>
     <script type="text/javascript" src="js/googleapi.js"></script>
+    <script type="text/javascript" src="js/googleanalytics.js"></script>
     <script type="text/javascript" src="js/colorconvert.js"></script>
 
     <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=onApiLoad"></script>
