Row to Group, reformat dialog

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 	<div class="my-dialog" id="saveDialog">
 		This file has not been saved, and you're about to lose your changes. Save it now?
 	</div>
-	<div class="my-dialog" id="newRowDialog">
-		Name your new row:
-		<input id="newRowName" width="50px"></input>
+	<div class="my-dialog" id="newRowDialog" style="text-align:center;">
+		Name the new group:
+		<input id="newRowName" width="50px" style="margin-top:10px;"></input>
 	</div>
 	<div id="output" style="width:100%;display:flex;flex-direction:row;"></div>
 </body>
