--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 
     <script type="text/javascript" src="js/taskboard.js"></script>
-    <script type="text/javascript" src="js/googleapi.js"></script>
     <script type="text/javascript" src="js/googleanalytics.js"></script>
     <script type="text/javascript" src="js/colorconvert.js"></script>
 
     <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=onApiLoad"></script>
  
 	<link rel="stylesheet" href="css/taskboard.css"></style>
-	<link rel="stylesheet" href="css/googleapi.css"></style>
 
 	<style type="text/css">
 		body {
@@ -33,11 +31,11 @@
 	</style>
 
 </head>
-<body ondrop="newRow(event)" ondragover="allowDrop(event)" style="min-height:90%;">
+<body ondrop="newRow(event)" ondragover="allowDrop(event)" style="min-height:90%;" draggable="false">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
 	<div id="taskboard-toolbar">
 	<div id="left-buttons">
-    <div style="float:left;height:100px;margin:10px;padding:10px;background:#F0F0F0;margin-left:15px;">
+    <div style="float:left;height:100px;margin:10px;padding:10px;background:#F0F0F0;margin-left:15px;user-select:none;">
 		<div id="open-local-file" class="fileinput fileinput-new" data-provides="fileinput" style="margin-left:0px;">
 			<button class="btn btn-default toolbar-button newfile-button" onclick="newFile()" style="float:left;margin:10px;margin-left:0px;">
 				<i class="fa fa-file-code-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>New File
@@ -55,25 +53,19 @@
 				<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
 			</span>
 		</div>
-		<div id="open-drive-file">
-			<button class="btn btn-default btn-file" onclick="createPicker();">
-				<i class="fa fa-folder-o" aria-hidden="true" style="width:10px;margin-right:10px;"></i>
-				<span>Open Drive File</span>
-			</button>
-		</div>
 		<span id="result"></span>
 	</div>
-	<div style="float:left;margin-top:30px;margin-left:15px;">
+	<div style="float:left;margin-top:30px;margin-left:15px;user-select:none;">
 		<button class="btn btn-default toolbar-button savefile-button" id="savefile-button" onclick="saveFile()" style="margin:0px;padding:8px;" disabled>
 			<div style="float:left;"><i class="fa fa-floppy-o" aria-hidden="true" style="width:40px;font-size:300%;margin-right:10px;"></i></div>
 			<div style="float:left;">Save<br/>to File</div>
 		</button>
 	</div>
 	</div>
-	<div id="middle-buttons" style="diplay:none;">
+	<div id="middle-buttons" style="diplay:none;user-select:none;">
 	<div style="margin-top:30px;margin-left:10px;">
 	  <label for="font-size">Size:</label>
-	  <input type="text" id="font-size" readonly style="text-align:center;width:80px;border:0; color:#000000; font-weight:bold;">
+	  <input type="text" id="font-size" readonly style="user-select:none;text-align:center;width:80px;border:0; color:#000000; font-weight:bold;">
 	  <div id="font-size-slider" style="margin-top:10px;width:150px;"></div>
 	</div>
 	</div>
@@ -103,8 +95,8 @@
 				</td>
 			</tr>
 			<tr style="height:15px;"></tr>
-			<tr style="height:30px;"><td>Start Date:</td><td><input type="text" id="datepicker-start" style="width:100%;"></td></tr>
-			<tr><td>Due Date:</td><td><input type="text" id="datepicker-due" style="width:100%;"></td></tr>
+			<tr style="height:30px;"><td>Start Date:</td><td><input type="date" id="datepicker-start" style="width:100%;"></td></tr>
+			<tr><td>Due Date:</td><td><input type="date" id="datepicker-due" style="width:100%;"></td></tr>
 			<tr style="height:30px;"></tr>
 			<tr style="height:30px;">
 				<td>Color:</td>
@@ -139,6 +131,6 @@
 		Name the new group:
 		<input id="newRowName" width="50px" style="margin-top:10px;"></input>
 	</div>
-	<div id="output" style="width:100%;display:flex;flex-direction:row;"></div>
+	<div id="output" style="width:100%;display:flex;flex-direction:row;" draggable="false"></div>
 </body>
 </html>
