No Resize Textarea

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<tr style="vertical-align:top;">
 				<td style="min-width:100px;padding-top:3px;">Task Name:</td>
 				<td>
-					<textarea type="text" cols="21" rows="2" id="namepicker" style="width:100%;margin-bottom:5px;"></textarea>
+					<textarea type="text" cols="21" rows="2" id="namepicker" style="width:100%;margin-bottom:5px;resize:none;"></textarea>
 					<button type="button" class="btn btn-default" style="padding:5px;padding-top:1px;padding-bottom:1px;margin-left:0px;font-size:12px;" onclick="completeTask();">
 					<i class="fa fa-check-square-o" aria-hidden="true" style="margin-right:5px;"></i>Finish</button>		
 					<button type="button" class="btn btn-default" style="padding:5px;padding-top:1px;padding-bottom:1px;margin-left:2px;font-size:12px;" onclick="deleteTask();">
