Add Context Menu

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <script type="text/javascript" src="js/googleanalytics.js"></script>
     <script type="text/javascript" src="js/colorconvert.js"></script>
 
-    <script type="text/javascript" src="https://apis.google.com/js/api.js?onload=onApiLoad"></script>
- 
+    <link href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.css" rel="stylesheet" type="text/css">
+    <script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.js" type="text/javascript"></script>
+    <script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.ui.position.min.js" type="text/javascript"></script>
+    <script src="https://swisnl.github.io/jQuery-contextMenu/js/main.js" type="text/javascript"></script>
+	
 	<link rel="stylesheet" href="css/taskboard.css"></style>
 
 	<style type="text/css">
@@ -29,7 +32,6 @@
 			background: darkgrey;
 		}
 	</style>
-
 </head>
 <body ondrop="newRow(event)" ondragover="allowDrop(event)" style="min-height:90%;" draggable="false">
     <h1 style="margin-left:20px;" class="app-header">Task Board by LevenTech</h1>
